Thu Apr  6 19:15:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Thread.cpp:
          Fixed compile problem in single threaded no online build. Thanks
          to Ossama Othman for reporting this

Thu Apr  6 15:58:00 UTC 2006  Simon Massey  <sma@prismtech.com>

        * bin/tao_other_tests.lst:
          Add more !DISABLE_ToFix_LynxOS_* marks to failing tests

Thu Apr  6 10:07:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/run_test.lst:
        * tests/tests.mpc:
        * tests/Bug_2497_Regression_Test.cpp:
          Added regression for bug 2497, we have to see what the best fix
          is. Thanks to Sergey Zubarev <sergant128 at mail dot ru> for
          providing reporting this.

Thu Apr  6 06:05:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/config-macosx-tiger.h:
          Don't define ACE_SIZEOF_LONG_DOUBLE when it is already set. Can
          happen when we build for OS X on Intel. Thanks to Ignacio Alvarez
          <support at xentient dot com> for reporting this. This fixes bugzilla
          2496.

Wed Apr  5 23:02:50 UTC 2006  Adam Mitz  <mitza@ociweb.com>

        * bin/tao_orb_tests.lst:

         Added TAO/tests/Bug_2494_Regression.

Wed Apr  5 22:03:52 UTC 2006  Gan Deng  <gan.deng@vanderbilt.edu>

        * bin/MakeProjectCreator/config/ciao_events_dnc.mpb

          Modify the project dependency so its built after
          CIAO_DnC_Container project. This should fix the
          errors on SuSE_FP_Stats build.

Wed Apr  5 19:32:19 UTC 2006  Gan Deng  <gan.deng@vanderbilt.edu>

        * bin/MakeProjectCreator/config/ciao_deployment_stub.mpb

          Added library dependency to CIAO_Events_DnC, so static
          build could resolve symbols in this library.

Mon Apr  5 14:59:37 UTC 2006  Ossama Othman  <ossama_othman at symantec dot com>

        * ace/SSL/SSL_Context.cpp:
        * ace/SSL/SSL_Context.h:
